--- a/DevNote/20180621.md
+++ b/DevNote/20180621.md
@@ -1,4 +1,4 @@
-# 셀간격조절 컨트롤
+# 셀조절 컨트롤
 
 만들려고 생각은 했었다. 하지만 구지 필요한가 라는 생각도 들긴 했었고 만들 방법이 생각나지 않았다. 그러던중 메일을 받았다. 메일 내용은 셀간격이 너무 짤고 처리할 문자열
 길이가 길어 처리하는데 불편하다는 것이다. 별로 만들 생각은 없었지만 그때부터 어떻게 만들까 생각을 시작했다. 요구사항이 있으면 만들어야지.
@@ -31,11 +31,11 @@ Disable에서는 dicionary에 있는 정보들을 List에 넣어줘야 한다.
     .
     private void OnDisable()
     {
-        guidKey.Clear();
-        cellInfo.Clear();
-        foreach(var pair in cellWidthInfoDic)
+        guidKeyStore.Clear();
+        widthInfoStore.Clear();
+        foreach(var pair in m_cellDic)
         {
-            guidKey.Add(pair.Key);
+            guidKeyStore.Add(pair.Key);
             var st = "";
             foreach(var s in pair.Value)
             {
@@ -43,10 +43,24 @@ Disable에서는 dicionary에 있는 정보들을 List에 넣어줘야 한다.
                     st += ",";
                 st += s;
             }
-            cellInfo.Add(st);
+            widthInfoStore.Add(st);
         }
     }
-    .
+
+    priavte void OnEnable(){
+        for (int i = 0; i < guidKeyStore.Count; i++)  
+                    m_cellDic.Add(guidKeyStore[i], widthInfoStore[i].Split(',').Select(s=>float.Parse(s)).ToList());
+    }
+
     .
     .
 ```
+
+ 이중리스트도 SerilizeField가 안먹히니까 콤마로 구분해서 문자열로 넣었다. Enable에서는
+ 그냥 각 List가 저장하고 있는 데이터를 Dicionary에 넣으면 된다. 이제 sheet에 대하여 m_cellDic에 자료가 없거나 필드수가 맞지 않으면 새로 생성해서 넣어주고 각 list<float>에 
+ 따라 필드를 보여주면 끝난다.
+
+그 다음 고민한건 어떻게 움직일 것인가.... 처음 시도한 것은 Button이다. 하지만 버튼은 눌렀다 뗏을 때 True가 되어 중괄호 안의 명령문을 실행한다. 버튼을 눌렀을 때 조금씩 넓어지거나 좁아지게? 이건 너무 써보니 불편했다. 결국은 그냥 내가 원하는 컨트롤을 만들었다. 해당하는 위치를 MouseDown한뒤 외부GUI공간에서 실행되게 만들고 Up이벤트를 받으면 그만.. 사실 코드가 너무 꼬여서 여기다 올리긴 그렇고 설명을 해도 깔끔하게 할 수 있을 것 같진 않다. 작동 영상만 링크해서 올린다. 나중에 깔끔하게 정리해서 CommonCode에 올리던가 해야겠다.
+
+![cellwidth](cellwidth.gih)
+
