--- a/DevNote/20180621.md
+++ b/DevNote/20180621.md
@@ -62,5 +62,5 @@ Disable에서는 dicionary에 있는 정보들을 List에 넣어줘야 한다.
 
 그 다음 고민한건 어떻게 움직일 것인가.... 처음 시도한 것은 Button이다. 하지만 버튼은 눌렀다 뗏을 때 True가 되어 중괄호 안의 명령문을 실행한다. 버튼을 눌렀을 때 조금씩 넓어지거나 좁아지게? 이건 너무 써보니 불편했다. 결국은 그냥 내가 원하는 컨트롤을 만들었다. 해당하는 위치를 MouseDown한뒤 외부GUI공간에서 실행되게 만들고 Up이벤트를 받으면 그만.. 사실 코드가 너무 꼬여서 여기다 올리긴 그렇고 설명을 해도 깔끔하게 할 수 있을 것 같진 않다. 작동 영상만 링크해서 올린다. 나중에 깔끔하게 정리해서 CommonCode에 올리던가 해야겠다.
 
-![cellwidth](cellwidth.gih)
+![cellwidth](cellwidth.gif)
 
